// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/tree-select/demo/async.md correctly 1`] = `
<div
  class="m-design-select m-design-tree-select m-design-select-single m-design-select-show-arrow"
  style="width:100%"
>
  <div
    class="m-design-select-selector"
  >
    <span
      class="m-design-select-selection-search"
    >
      <input
        aria-autocomplete="list"
        aria-controls="undefined_list"
        aria-haspopup="listbox"
        aria-owns="undefined_list"
        autocomplete="off"
        class="m-design-select-selection-search-input"
        readonly=""
        role="combobox"
        style="opacity:0"
        type="search"
        unselectable="on"
        value=""
      />
    </span>
    <span
      class="m-design-select-selection-placeholder"
    >
      Please select
    </span>
  </div>
  <span
    aria-hidden="true"
    class="m-design-select-arrow"
    style="user-select:none;-webkit-user-select:none"
    unselectable="on"
  >
    <span
      class="anticon m-design-select-suffix mui-down-icon"
      role="img"
    >
      <svg
        fill="currentColor"
        height="1em"
        viewBox="0 0 12 12"
        width="1em"
      >
        <g
          fill="none"
          fill-rule="evenodd"
          stroke="none"
          stroke-width="1"
        >
          <g
            transform="translate(-97.000000, -455.000000)"
          >
            <g
              transform="translate(103.000000, 461.000000) scale(1, -1) rotate(180.000000) translate(-103.000000, -461.000000) translate(97.000000, 455.000000)"
            >
              <path
                d="M3.0661242,4.03910083 C3.26138577,3.84383826 3.57796363,3.84383836 3.77323354,4.03910083 L5.95336258,6.21924339 L8.07100164,4.10160081 C8.26626155,3.90633845 8.58285141,3.90633825 8.77811133,4.10160081 L9.13166117,4.45515374 C9.32693108,4.6504157 9.32693108,4.96699364 9.13166117,5.1622636 L6.30324242,7.99068303 C6.10797251,8.185953 5.79139265,8.185953 5.59613273,7.99068303 L5.24258289,7.63713311 C5.2251829,7.61974311 5.20934291,7.60138311 5.19504291,7.58223312 L2.71257101,5.09976361 C2.5173086,4.90449365 2.5173086,4.58791572 2.71257101,4.39265394 L3.0661242,4.03910083 Z"
                fill="currentColor"
              />
            </g>
          </g>
        </g>
      </svg>
    </span>
  </span>
</div>
`;

exports[`renders ./components/tree-select/demo/basic.md correctly 1`] = `
<div
  class="m-design-select m-design-tree-select m-design-select-single m-design-select-allow-clear m-design-select-show-arrow m-design-select-show-search"
  style="width:100%"
>
  <div
    class="m-design-select-selector"
  >
    <span
      class="m-design-select-selection-search"
    >
      <input
        aria-autocomplete="list"
        aria-controls="undefined_list"
        aria-haspopup="listbox"
        aria-owns="undefined_list"
        autocomplete="off"
        class="m-design-select-selection-search-input"
        role="combobox"
        type="search"
        value=""
      />
    </span>
    <span
      class="m-design-select-selection-placeholder"
    >
      Please select
    </span>
  </div>
  <span
    aria-hidden="true"
    class="m-design-select-arrow"
    style="user-select:none;-webkit-user-select:none"
    unselectable="on"
  >
    <span
      class="anticon m-design-select-suffix mui-down-icon"
      role="img"
    >
      <svg
        fill="currentColor"
        height="1em"
        viewBox="0 0 12 12"
        width="1em"
      >
        <g
          fill="none"
          fill-rule="evenodd"
          stroke="none"
          stroke-width="1"
        >
          <g
            transform="translate(-97.000000, -455.000000)"
          >
            <g
              transform="translate(103.000000, 461.000000) scale(1, -1) rotate(180.000000) translate(-103.000000, -461.000000) translate(97.000000, 455.000000)"
            >
              <path
                d="M3.0661242,4.03910083 C3.26138577,3.84383826 3.57796363,3.84383836 3.77323354,4.03910083 L5.95336258,6.21924339 L8.07100164,4.10160081 C8.26626155,3.90633845 8.58285141,3.90633825 8.77811133,4.10160081 L9.13166117,4.45515374 C9.32693108,4.6504157 9.32693108,4.96699364 9.13166117,5.1622636 L6.30324242,7.99068303 C6.10797251,8.185953 5.79139265,8.185953 5.59613273,7.99068303 L5.24258289,7.63713311 C5.2251829,7.61974311 5.20934291,7.60138311 5.19504291,7.58223312 L2.71257101,5.09976361 C2.5173086,4.90449365 2.5173086,4.58791572 2.71257101,4.39265394 L3.0661242,4.03910083 Z"
                fill="currentColor"
              />
            </g>
          </g>
        </g>
      </svg>
    </span>
  </span>
</div>
`;

exports[`renders ./components/tree-select/demo/checkable.md correctly 1`] = `
<div
  class="m-design-select m-design-tree-select m-design-select-multiple m-design-select-show-search"
  style="width:100%"
>
  <div
    class="m-design-select-selector"
  >
    <div
      class="m-design-select-selection-overflow"
    >
      <div
        class="m-design-select-selection-overflow-item"
        style="opacity:1"
      >
        <span
          class="m-design-select-selection-item"
          title="Node1"
        >
          <span
            class="m-design-select-selection-item-content"
          >
            Node1
          </span>
          <span
            aria-hidden="true"
            class="m-design-select-selection-item-remove"
            style="user-select:none;-webkit-user-select:none"
            unselectable="on"
          >
            <svg
              fill="currentColor"
              height="1em"
              p-id="4123"
              viewBox="0 0 1024 1024"
              width="1em"
            >
              <path
                d="m648.57166,510.78645l344.46312,-344.46438c38.04934,-38.04929 38.04934,-99.73746 0.00164,-137.78511c-38.04769,-38.04765 -99.73756,-38.04928 -137.78525,0l-344.46476,344.46439l-344.46478,-344.46439c-38.04932,-38.04928 -99.73919,-38.04928 -137.78525,0c-38.04769,38.04765 -38.04932,99.73745 0,137.78674l344.46314,344.46275l-344.46151,344.46438c-38.04932,38.04928 -38.04932,99.73745 0,137.7851c38.04771,38.04929 99.73593,38.04929 137.78527,0l344.46149,-344.4611l344.46314,344.46273c38.05096,38.04929 99.73919,38.04765 137.78688,0c38.04934,-38.04928 38.04934,-99.73745 0,-137.7851l-344.46312,-344.466z"
                p-id="1263"
              />
            </svg>
          </span>
        </span>
      </div>
      <div
        class="m-design-select-selection-overflow-item m-design-select-selection-overflow-item-suffix"
        style="opacity:1"
      >
        <div
          class="m-design-select-selection-search"
          style="width:0"
        >
          <input
            aria-autocomplete="list"
            aria-controls="undefined_list"
            aria-haspopup="listbox"
            aria-owns="undefined_list"
            autocomplete="off"
            class="m-design-select-selection-search-input"
            readonly=""
            role="combobox"
            style="opacity:0"
            type="search"
            unselectable="on"
            value=""
          />
          <span
            aria-hidden="true"
            class="m-design-select-selection-search-mirror"
          >
             
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders ./components/tree-select/demo/multiple.md correctly 1`] = `
<div
  class="m-design-select m-design-tree-select m-design-select-multiple m-design-select-allow-clear m-design-select-show-search"
  style="width:100%"
>
  <div
    class="m-design-select-selector"
  >
    <div
      class="m-design-select-selection-overflow"
    >
      <div
        class="m-design-select-selection-overflow-item m-design-select-selection-overflow-item-suffix"
        style="opacity:1"
      >
        <div
          class="m-design-select-selection-search"
          style="width:0"
        >
          <input
            aria-autocomplete="list"
            aria-controls="undefined_list"
            aria-haspopup="listbox"
            aria-owns="undefined_list"
            autocomplete="off"
            class="m-design-select-selection-search-input"
            readonly=""
            role="combobox"
            style="opacity:0"
            type="search"
            unselectable="on"
            value=""
          />
          <span
            aria-hidden="true"
            class="m-design-select-selection-search-mirror"
          >
             
          </span>
        </div>
      </div>
    </div>
    <span
      class="m-design-select-selection-placeholder"
    >
      Please select
    </span>
  </div>
</div>
`;

exports[`renders ./components/tree-select/demo/placement.md correctly 1`] = `
Array [
  <div
    class="m-design-radio-group m-design-radio-group-outline"
  >
    <label
      class="m-design-radio-button-wrapper m-design-radio-button-wrapper-checked"
    >
      <span
        class="m-design-radio-button-single m-design-radio-button-single-checked"
      >
        <input
          checked=""
          class="m-design-radio-button-single-input"
          type="radio"
          value="topLeft"
        />
        <span
          class="m-design-radio-button-single-inner"
        />
      </span>
      <span>
        topLeft
      </span>
    </label>
    <label
      class="m-design-radio-button-wrapper"
    >
      <span
        class="m-design-radio-button-single"
      >
        <input
          class="m-design-radio-button-single-input"
          type="radio"
          value="topRight"
        />
        <span
          class="m-design-radio-button-single-inner"
        />
      </span>
      <span>
        topRight
      </span>
    </label>
    <label
      class="m-design-radio-button-wrapper"
    >
      <span
        class="m-design-radio-button-single"
      >
        <input
          class="m-design-radio-button-single-input"
          type="radio"
          value="bottomLeft"
        />
        <span
          class="m-design-radio-button-single-inner"
        />
      </span>
      <span>
        bottomLeft
      </span>
    </label>
    <label
      class="m-design-radio-button-wrapper"
    >
      <span
        class="m-design-radio-button-single"
      >
        <input
          class="m-design-radio-button-single-input"
          type="radio"
          value="bottomRight"
        />
        <span
          class="m-design-radio-button-single-inner"
        />
      </span>
      <span>
        bottomRight
      </span>
    </label>
  </div>,
  <br />,
  <br />,
  <div
    class="m-design-select m-design-tree-select m-design-select-single m-design-select-allow-clear m-design-select-show-arrow m-design-select-show-search"
  >
    <div
      class="m-design-select-selector"
    >
      <span
        class="m-design-select-selection-search"
      >
        <input
          aria-autocomplete="list"
          aria-controls="undefined_list"
          aria-haspopup="listbox"
          aria-owns="undefined_list"
          autocomplete="off"
          class="m-design-select-selection-search-input"
          role="combobox"
          type="search"
          value=""
        />
      </span>
      <span
        class="m-design-select-selection-placeholder"
      >
        Please select
      </span>
    </div>
    <span
      aria-hidden="true"
      class="m-design-select-arrow"
      style="user-select:none;-webkit-user-select:none"
      unselectable="on"
    >
      <span
        class="anticon m-design-select-suffix mui-down-icon"
        role="img"
      >
        <svg
          fill="currentColor"
          height="1em"
          viewBox="0 0 12 12"
          width="1em"
        >
          <g
            fill="none"
            fill-rule="evenodd"
            stroke="none"
            stroke-width="1"
          >
            <g
              transform="translate(-97.000000, -455.000000)"
            >
              <g
                transform="translate(103.000000, 461.000000) scale(1, -1) rotate(180.000000) translate(-103.000000, -461.000000) translate(97.000000, 455.000000)"
              >
                <path
                  d="M3.0661242,4.03910083 C3.26138577,3.84383826 3.57796363,3.84383836 3.77323354,4.03910083 L5.95336258,6.21924339 L8.07100164,4.10160081 C8.26626155,3.90633845 8.58285141,3.90633825 8.77811133,4.10160081 L9.13166117,4.45515374 C9.32693108,4.6504157 9.32693108,4.96699364 9.13166117,5.1622636 L6.30324242,7.99068303 C6.10797251,8.185953 5.79139265,8.185953 5.59613273,7.99068303 L5.24258289,7.63713311 C5.2251829,7.61974311 5.20934291,7.60138311 5.19504291,7.58223312 L2.71257101,5.09976361 C2.5173086,4.90449365 2.5173086,4.58791572 2.71257101,4.39265394 L3.0661242,4.03910083 Z"
                  fill="currentColor"
                />
              </g>
            </g>
          </g>
        </svg>
      </span>
    </span>
  </div>,
]
`;

exports[`renders ./components/tree-select/demo/status.md correctly 1`] = `
<div
  class="m-design-space m-design-space-vertical"
  style="width:100%"
>
  <div
    class="m-design-space-item"
    style="margin-bottom:8px"
  >
    <div
      class="m-design-select m-design-tree-select m-design-select-status-error m-design-select-single m-design-select-show-arrow"
      style="width:100%"
    >
      <div
        class="m-design-select-selector"
      >
        <span
          class="m-design-select-selection-search"
        >
          <input
            aria-autocomplete="list"
            aria-controls="undefined_list"
            aria-haspopup="listbox"
            aria-owns="undefined_list"
            autocomplete="off"
            class="m-design-select-selection-search-input"
            readonly=""
            role="combobox"
            style="opacity:0"
            type="search"
            unselectable="on"
            value=""
          />
        </span>
        <span
          class="m-design-select-selection-placeholder"
        >
          Error
        </span>
      </div>
      <span
        aria-hidden="true"
        class="m-design-select-arrow"
        style="user-select:none;-webkit-user-select:none"
        unselectable="on"
      >
        <span
          class="anticon m-design-select-suffix mui-down-icon"
          role="img"
        >
          <svg
            fill="currentColor"
            height="1em"
            viewBox="0 0 12 12"
            width="1em"
          >
            <g
              fill="none"
              fill-rule="evenodd"
              stroke="none"
              stroke-width="1"
            >
              <g
                transform="translate(-97.000000, -455.000000)"
              >
                <g
                  transform="translate(103.000000, 461.000000) scale(1, -1) rotate(180.000000) translate(-103.000000, -461.000000) translate(97.000000, 455.000000)"
                >
                  <path
                    d="M3.0661242,4.03910083 C3.26138577,3.84383826 3.57796363,3.84383836 3.77323354,4.03910083 L5.95336258,6.21924339 L8.07100164,4.10160081 C8.26626155,3.90633845 8.58285141,3.90633825 8.77811133,4.10160081 L9.13166117,4.45515374 C9.32693108,4.6504157 9.32693108,4.96699364 9.13166117,5.1622636 L6.30324242,7.99068303 C6.10797251,8.185953 5.79139265,8.185953 5.59613273,7.99068303 L5.24258289,7.63713311 C5.2251829,7.61974311 5.20934291,7.60138311 5.19504291,7.58223312 L2.71257101,5.09976361 C2.5173086,4.90449365 2.5173086,4.58791572 2.71257101,4.39265394 L3.0661242,4.03910083 Z"
                    fill="currentColor"
                  />
                </g>
              </g>
            </g>
          </svg>
        </span>
      </span>
    </div>
  </div>
  <div
    class="m-design-space-item"
  >
    <div
      class="m-design-select m-design-tree-select m-design-select-status-warning m-design-select-multiple m-design-select-show-search"
      style="width:100%"
    >
      <div
        class="m-design-select-selector"
      >
        <div
          class="m-design-select-selection-overflow"
        >
          <div
            class="m-design-select-selection-overflow-item m-design-select-selection-overflow-item-suffix"
            style="opacity:1"
          >
            <div
              class="m-design-select-selection-search"
              style="width:0"
            >
              <input
                aria-autocomplete="list"
                aria-controls="undefined_list"
                aria-haspopup="listbox"
                aria-owns="undefined_list"
                autocomplete="off"
                class="m-design-select-selection-search-input"
                readonly=""
                role="combobox"
                style="opacity:0"
                type="search"
                unselectable="on"
                value=""
              />
              <span
                aria-hidden="true"
                class="m-design-select-selection-search-mirror"
              >
                 
              </span>
            </div>
          </div>
        </div>
        <span
          class="m-design-select-selection-placeholder"
        >
          Warning multiple
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders ./components/tree-select/demo/suffix.md correctly 1`] = `
<div
  class="m-design-select m-design-tree-select m-design-select-single m-design-select-allow-clear m-design-select-show-arrow m-design-select-show-search"
  style="width:100%"
>
  <div
    class="m-design-select-selector"
  >
    <span
      class="m-design-select-selection-search"
    >
      <input
        aria-autocomplete="list"
        aria-controls="undefined_list"
        aria-haspopup="listbox"
        aria-owns="undefined_list"
        autocomplete="off"
        class="m-design-select-selection-search-input"
        role="combobox"
        type="search"
        value=""
      />
    </span>
    <span
      class="m-design-select-selection-placeholder"
    >
      Please select
    </span>
  </div>
  <span
    aria-hidden="true"
    class="m-design-select-arrow"
    style="user-select:none;-webkit-user-select:none"
    unselectable="on"
  >
    <span
      aria-label="smile"
      class="anticon anticon-smile"
      role="img"
    >
      <svg
        aria-hidden="true"
        data-icon="smile"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M288 421a48 48 0 1096 0 48 48 0 10-96 0zm352 0a48 48 0 1096 0 48 48 0 10-96 0zM512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm263 711c-34.2 34.2-74 61-118.3 79.8C611 874.2 562.3 884 512 884c-50.3 0-99-9.8-144.8-29.2A370.4 370.4 0 01248.9 775c-34.2-34.2-61-74-79.8-118.3C149.8 611 140 562.3 140 512s9.8-99 29.2-144.8A370.4 370.4 0 01249 248.9c34.2-34.2 74-61 118.3-79.8C413 149.8 461.7 140 512 140c50.3 0 99 9.8 144.8 29.2A370.4 370.4 0 01775.1 249c34.2 34.2 61 74 79.8 118.3C874.2 413 884 461.7 884 512s-9.8 99-29.2 144.8A368.89 368.89 0 01775 775zM664 533h-48.1c-4.2 0-7.8 3.2-8.1 7.4C604 589.9 562.5 629 512 629s-92.1-39.1-95.8-88.6c-.3-4.2-3.9-7.4-8.1-7.4H360a8 8 0 00-8 8.4c4.4 84.3 74.5 151.6 160 151.6s155.6-67.3 160-151.6a8 8 0 00-8-8.4z"
        />
      </svg>
    </span>
  </span>
</div>
`;

exports[`renders ./components/tree-select/demo/treeData.md correctly 1`] = `
<div
  class="m-design-select m-design-tree-select m-design-select-single m-design-select-show-arrow"
  style="width:100%"
>
  <div
    class="m-design-select-selector"
  >
    <span
      class="m-design-select-selection-search"
    >
      <input
        aria-autocomplete="list"
        aria-controls="undefined_list"
        aria-haspopup="listbox"
        aria-owns="undefined_list"
        autocomplete="off"
        class="m-design-select-selection-search-input"
        readonly=""
        role="combobox"
        style="opacity:0"
        type="search"
        unselectable="on"
        value=""
      />
    </span>
    <span
      class="m-design-select-selection-placeholder"
    >
      Please select
    </span>
  </div>
  <span
    aria-hidden="true"
    class="m-design-select-arrow"
    style="user-select:none;-webkit-user-select:none"
    unselectable="on"
  >
    <span
      class="anticon m-design-select-suffix mui-down-icon"
      role="img"
    >
      <svg
        fill="currentColor"
        height="1em"
        viewBox="0 0 12 12"
        width="1em"
      >
        <g
          fill="none"
          fill-rule="evenodd"
          stroke="none"
          stroke-width="1"
        >
          <g
            transform="translate(-97.000000, -455.000000)"
          >
            <g
              transform="translate(103.000000, 461.000000) scale(1, -1) rotate(180.000000) translate(-103.000000, -461.000000) translate(97.000000, 455.000000)"
            >
              <path
                d="M3.0661242,4.03910083 C3.26138577,3.84383826 3.57796363,3.84383836 3.77323354,4.03910083 L5.95336258,6.21924339 L8.07100164,4.10160081 C8.26626155,3.90633845 8.58285141,3.90633825 8.77811133,4.10160081 L9.13166117,4.45515374 C9.32693108,4.6504157 9.32693108,4.96699364 9.13166117,5.1622636 L6.30324242,7.99068303 C6.10797251,8.185953 5.79139265,8.185953 5.59613273,7.99068303 L5.24258289,7.63713311 C5.2251829,7.61974311 5.20934291,7.60138311 5.19504291,7.58223312 L2.71257101,5.09976361 C2.5173086,4.90449365 2.5173086,4.58791572 2.71257101,4.39265394 L3.0661242,4.03910083 Z"
                fill="currentColor"
              />
            </g>
          </g>
        </g>
      </svg>
    </span>
  </span>
</div>
`;

exports[`renders ./components/tree-select/demo/treeLine.md correctly 1`] = `
<div
  class="m-design-space m-design-space-vertical"
>
  <div
    class="m-design-space-item"
    style="margin-bottom:8px"
  >
    <button
      aria-checked="true"
      class="m-design-switch m-design-switch-checked"
      role="switch"
      type="button"
    >
      <div
        class="m-design-switch-handle"
      />
      <span
        class="m-design-switch-inner"
      >
        treeLine
      </span>
    </button>
  </div>
  <div
    class="m-design-space-item"
    style="margin-bottom:8px"
  >
    <button
      aria-checked="false"
      class="m-design-switch"
      role="switch"
      type="button"
    >
      <div
        class="m-design-switch-handle"
      />
      <span
        class="m-design-switch-inner"
      >
        showLeafIcon
      </span>
    </button>
  </div>
  <div
    class="m-design-space-item"
  >
    <div
      class="m-design-select m-design-tree-select m-design-select-single m-design-select-show-arrow"
      style="width:300px"
    >
      <div
        class="m-design-select-selector"
      >
        <span
          class="m-design-select-selection-search"
        >
          <input
            aria-autocomplete="list"
            aria-controls="undefined_list"
            aria-haspopup="listbox"
            aria-owns="undefined_list"
            autocomplete="off"
            class="m-design-select-selection-search-input"
            readonly=""
            role="combobox"
            style="opacity:0"
            type="search"
            unselectable="on"
            value=""
          />
        </span>
        <span
          class="m-design-select-selection-placeholder"
        />
      </div>
      <span
        aria-hidden="true"
        class="m-design-select-arrow"
        style="user-select:none;-webkit-user-select:none"
        unselectable="on"
      >
        <span
          class="anticon m-design-select-suffix mui-down-icon"
          role="img"
        >
          <svg
            fill="currentColor"
            height="1em"
            viewBox="0 0 12 12"
            width="1em"
          >
            <g
              fill="none"
              fill-rule="evenodd"
              stroke="none"
              stroke-width="1"
            >
              <g
                transform="translate(-97.000000, -455.000000)"
              >
                <g
                  transform="translate(103.000000, 461.000000) scale(1, -1) rotate(180.000000) translate(-103.000000, -461.000000) translate(97.000000, 455.000000)"
                >
                  <path
                    d="M3.0661242,4.03910083 C3.26138577,3.84383826 3.57796363,3.84383836 3.77323354,4.03910083 L5.95336258,6.21924339 L8.07100164,4.10160081 C8.26626155,3.90633845 8.58285141,3.90633825 8.77811133,4.10160081 L9.13166117,4.45515374 C9.32693108,4.6504157 9.32693108,4.96699364 9.13166117,5.1622636 L6.30324242,7.99068303 C6.10797251,8.185953 5.79139265,8.185953 5.59613273,7.99068303 L5.24258289,7.63713311 C5.2251829,7.61974311 5.20934291,7.60138311 5.19504291,7.58223312 L2.71257101,5.09976361 C2.5173086,4.90449365 2.5173086,4.58791572 2.71257101,4.39265394 L3.0661242,4.03910083 Z"
                    fill="currentColor"
                  />
                </g>
              </g>
            </g>
          </svg>
        </span>
      </span>
    </div>
  </div>
</div>
`;
